# beauty-bot-

./: .env.example  .gitignore  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  seed.py
bot/: filters.py  scheduler.py
bot/handlers/: admin.py  client.py  my_bookings.py  reviews.py
bot/keyboards/: admin_menu.py  booking.py  calendar.py  main_menu.py
bot/middlewares/: db.py  error_handler.py
db/: exceptions.py  models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial_schema.py
db/queries/: bookings.py  clients.py  masters.py  reviews.py  services.py  slots.py
