[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "beauty-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.13.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "apscheduler==3.10.4",
    "redis==5.2.1",
    "pydantic-settings==2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "testcontainers[postgres]==4.8.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
